--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -26,6 +26,7 @@
           <div class="inner">
             <h5>
               <a href
+                 ng-show="userCanCreateFilter"
                  ng-click="createFilter()">
                 New filter
                 <span class="glyphicon glyphicon-plus-sign"></span>
