--- a/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
+++ b/client/webapp/src/main/webapp/develop/invoice/invoice-start-form.html
@@ -12,8 +12,8 @@
            for="creditor">Creditor</label>
     <div class="controls">
       <input cam-variable-name="creditor"
-             ng-model="creditor"
              cam-variable-type="String"
+             required
              id="creditor"
              class="form-control"
              type="text"/>
@@ -28,8 +28,8 @@
            for="amount">Amount</label>
     <div class="controls">
       <input cam-variable-name="amount"
-             ng-model="amount"
              cam-variable-type="String"
+             required
              id="amount"
              class="form-control"
              type="text"/>
@@ -44,8 +44,8 @@
            for="invoiceNumber">Invoice Number</label>
     <div class="controls">
       <input cam-variable-name="invoiceNumber"
-             ng-model="invoiceNumber"
              cam-variable-type="String"
+             required
              id="invoiceNumber"
              class="form-control"
              type="text"/>
