improve(directives): isolate scopes of tasks list and task details

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -69,12 +69,14 @@
 
         <div class="cols col-sm-4 task-list">
           <div class="inner"
-               cam-tasklist-filter-tasks></div>
+               cam-tasklist-filter-tasks
+               filter="currentFilter"></div>
         </div>
 
         <div class="cols col-sm-6 current-task">
           <div class="inner"
-               cam-tasklist-task></div>
+               cam-tasklist-task
+               task="currentTask"></div>
         </div>
       </div>
     </div>
