refactor(diagram): uncomment the diagram tab
refactor(diagram): update the bpmn-js bower package
fix(diagram): correct highlighted diagram element style
fix(diagram): bind Snap.svg to the window object before loading bpmn-js

Related to: CAM-2652

--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -75,17 +75,15 @@
           </div>
         </tab>
 
-        <!--
         <tab heading="{{ 'DIAGRAM' | translate }}"
              active="tabs.diagram"
-             select="selectTab('diagram')"
-             select="drawDiagram()">
+             select="selectTab('diagram')">
           <div class="diagram-pane"
                cam-tasklist-task-diagram
                task="task">
           </div>
         </tab>
-        -->
+
       </tabset>
     </div>
   </div>
