feat(filter): display the amount of tasks for a filter
Related to: CAM-2755

--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -13,6 +13,8 @@
   <div class="task-filter"
        style="background-color: {{ filter.properties.color }}">
 
+    <div class="counter">{{ filter.itemCount }}</div>
+
     <h4 class="name"
         ng-click="focus(filter)">{{ filter.name }}</h4>
 
