feat(task): prevent access to form manipulation when not assignee
Related to: CAM-2736

--- a/client/client/scripts/task/directives/cam-tasklist-task-form-modal.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form-modal.html
@@ -9,11 +9,13 @@
 </div>
 
 
-<div class="form-container modal-body"></div>
+<div class="form-container modal-body"
+     ng-class="{'not-assignee': !isAssignee}"></div>
 
 
 <div class="modal-footer">
-  <div class="form-actions">
+  <div class="form-actions"
+       ng-class="{'not-assignee': !isAssignee}">
     <button class="btn btn-link"
             type="button"
             ng-click="exitFullscreen()"
