--- a/client/client/scripts/task/directives/cam-tasklist-task-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-form.html
@@ -1,9 +1,11 @@
-<div class="form-container"></div>
+<div ng-class="{'not-assignee': !isAssignee}">
+  <div class="form-container"></div>
 
-<div class="form-actions">
-  <button class="btn btn-primary"
-          type="submit"
-          ng-click="completeTask()"
-          ng-disabled="$invalid"
-          translate="COMPLETE">Complete</button>
+  <div class="form-actions">
+    <button class="btn btn-primary"
+            type="submit"
+            ng-click="completeTask()"
+            ng-disabled="$invalid"
+            translate="COMPLETE">Complete</button>
+  </div>
 </div>
