feat(history): show history for a task
New tab in task details shows history of user operations on this task.

Related to: CAM-2769

--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -65,13 +65,12 @@
           <div class="description-pane">{{ task.description }}</div>
         </tab>
 
-        <tab ng-if="history"
-             active="tabs.history"
+        <tab active="tabs.history"
              select="selectTab('history')"
              heading="{{ 'HISTORY' | translate }}">
           <div class="history-pane"
                cam-tasklist-task-history
-               history="history">
+               task="task">
           </div>
         </tab>
 
