--- a/client/client/scripts/task/directives/cam-tasklist-task-history.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-history.html
@@ -1,45 +1,33 @@
-<div class="day row" ng-repeat="day in days">
+<div class="day row" ng-repeat="day in days | orderBy:['-date.year', '-date.month', '-date.day']">
   <div class="col-xs-2">
     <div class="date-badge">
       <span class="day">{{ day.date.day }}</span>
-      <span class="month">{{ day.date.month }}</span>
+      <span class="month">{{ day.date.monthWord }}</span>
       <span class="year">{{ day.date.year }}</span>
     </div>
   </div>
 
   <div class="col-xs-10 instant">
-    <div class="instant row" ng-repeat="(time, events) in day.events">
-      <div class="col-xs-2 time-badge">
-        <a href="#"
-           data-toggle="tooltip"
-           data-placement="top"
-           title="User Name"
-           class="user-picture"></a>
-        {{ time }}
+    <div class="instant row" ng-repeat="event in day.eventArray | orderBy:'-time'">
+      <div class="col-xs-2">
+        {{ event.time }}
       </div>
 
       <div class="col-xs-10">
-        <div class="event" ng-repeat="(delta, event) in events">
-          <div ng-if="(event.orgValue || event.newValue) && event.operationType" class="row">
-            <div class="operation col-xs-12">
-              <span class="label">Operation:</span> {{ event.operationType }}
-            </div>
-
-            <div class="col-lg-6 original-value">
-              <div class="label">
-                Original value:
-              </div>
-              <div class="value">
-                {{ event.orgValue }}
-              </div>
-            </div>
-
-            <div class="col-lg-6 new-value">
-              <div class="label">
-                New value:
-              </div>
-              <div class="value">
-                {{ event.newValue }}
+        <div class="row">
+          <div class="event-header">
+            <span class="operation-type">{{ event.type }}</span>
+            <span class="operation-user">{{ event.userId }}</span>
+          </div>
+          <div class="col-xs-12 event-body">
+            <div class="row" ng-repeat="subEvent in event.subEvents">
+              <div class="col-sm-12 col-md-3 event-property">{{ subEvent.property }}</div>
+              <div class="col-sm-12 col-md-9 event-value">
+                <span ng-if="subEvent.orgValue">
+                  <span class="original-value">{{ subEvent.orgValue }}</span>
+                  <span class="glyphicon glyphicon-arrow-right"></span>
+                </span>
+                <span class="new-value">{{ subEvent.newValue }}</span>
               </div>
             </div>
           </div>
