--- a/client/client/scripts/task/directives/cam-tasklist-task-history.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-history.html
@@ -8,7 +8,7 @@
   </div>
 
   <div class="col-xs-10 instant">
-    <div class="instant row" ng-repeat="event in day.eventArray | orderBy:'-time'">
+    <div class="instant row" ng-repeat="event in day.eventArray | orderBy:'-timestamp'">
       <div class="col-xs-2">
         {{ event.time }}
       </div>
