--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -28,6 +28,8 @@
           -->
             <div cam-sorting-choices
                  tasklist-data="tasklistData"></div>
+            <div cam-task-search
+                 tasklist-data="tasklistData"></div>
           </div>
         </div>
       </div>
