impr(task history): adjust history layout
Related to: CAM-2769

--- a/client/client/scripts/task/directives/cam-tasklist-task-history.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-history.html
@@ -14,31 +14,29 @@
       </div>
 
       <div class="col-xs-10">
-        <div class="row">
-          <div class="event-header">
-            <span class="operation-type">{{ event.type }}</span>
-            <span class="operation-user">{{ event.userId }}</span>
+        <div class="row event-header">
+          <span class="col-sm-12 col-md-9 operation-type">{{ event.type | translate }}</span>
+          <span class="col-sm-12 col-md-3 operation-user">{{ event.userId }}</span>
+        </div>
+        <div class="row event-body">
+          <div ng-repeat="subEvent in event.subEvents" ng-if="event.type !== 'Comment'">
+            <div class="col-sm-12 col-md-3 event-property">{{ subEvent.property | translate }}</div>
+            <div class="col-sm-12 col-md-9 event-value">
+              <span ng-if="subEvent.orgValue">
+                <span class="original-value">
+                  <span ng-if="subEvent.propertyIsDate">{{ subEvent.orgValue | camDate }}</span>
+                  <span ng-if="!subEvent.propertyIsDate">{{ subEvent.orgValue }}</span>
+                </span>
+                <span class="glyphicon glyphicon-arrow-right"></span>
+              </span>
+              <span class="new-value">
+                <span ng-if="subEvent.propertyIsDate">{{ subEvent.newValue | camDate }}</span>
+                <span ng-if="!subEvent.propertyIsDate">{{ subEvent.newValue }}</span>
+              </span>
+            </div>
           </div>
-          <div class="col-xs-12 event-body">
-            <div class="row" ng-repeat="subEvent in event.subEvents" ng-if="event.type !== 'Comment'">
-              <div class="col-sm-12 col-md-3 event-property">{{ subEvent.property }}</div>
-              <div class="col-sm-12 col-md-9 event-value">
-                <span ng-if="subEvent.orgValue">
-                  <span class="original-value">
-                    <span ng-if="subEvent.propertyIsDate">{{ subEvent.orgValue | camDate }}</span>
-                    <span ng-if="!subEvent.propertyIsDate">{{ subEvent.orgValue }}</span>
-                  </span>
-                  <span class="glyphicon glyphicon-arrow-right"></span>
-                </span>
-                <span class="new-value">
-                  <span ng-if="subEvent.propertyIsDate">{{ subEvent.newValue | camDate }}</span>
-                  <span ng-if="!subEvent.propertyIsDate">{{ subEvent.newValue }}</span>
-                </span>
-              </div>
-            </div>
-            <div ng-if="event.type === 'Comment'">
-              {{event.message}}
-            </div>
+          <div class="col-xs-12" ng-if="event.type === 'Comment'">
+            {{event.message}}
           </div>
         </div>
       </div>
