--- a/client/client/scripts/task/directives/cam-tasklist-task-diagram.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task-diagram.html
@@ -1,3 +1,6 @@
+<div class="alert alert-danger" ng-if="error">
+  {{error}}
+</div>
 <div ng-if="loading"
      class="loader">
   <i class="animate-spin glyphicon glyphicon-refresh"></i>
