--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -18,8 +18,6 @@
            class="form-control"
            type="{{ varType }}"
            ng-model="editValue"
-           ng-change="echo(this)"
-           name="editValue"
            placeholder="{{ placeholder }}" />
 
     <span ng-if="varType === 'datetime' || varType === 'date' || varType === 'time'">
@@ -27,15 +25,21 @@
       <datepicker class="datepicker"
                   ng-if="varType === 'datetime' || varType === 'date'"
                   type="text"
-                  ng-model="_datetime.date"
                   ng-required="true"
                   is-open="datePickerOptions.isOpen"
-                  show-button-bar="false" />
+                  show-button-bar="false"
+
+                  ng-model="editValue"
+                  ng-change="changeDate(this)" />
+
 
       <timepicker class="timepicker"
                   ng-if="varType === 'datetime' || varType === 'time'"
                   show-meridian="false"
-                  ng-model="_datetime.time" />
+
+                  ng-model="editValue"
+                  ng-change="changeDate(this)" />
+
     </span>
   </span>
 
