impr(inline field): automatically focus input field
automatically focus inline input fields when entering the edit state

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -1,6 +1,6 @@
 <span class="view"
       ng-if="!editing"
-      ng-click="toggleEditing()"
+      ng-click="startEditing()"
       ng-transclude>
 
 </span>
