fix(inline edit): apply changes of inline edit fields
also apply changes on enter and abort on ESC

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -18,6 +18,7 @@
            class="form-control"
            type="{{ varType }}"
            ng-model="editValue"
+           ng-keyup="($event.keyCode == 13 && applyChange()) || ($event.keyCode == 27 && cancelChange())"
            placeholder="{{ placeholder }}" />
 
     <span ng-if="varType === 'datetime' || varType === 'date' || varType === 'time'">
