fix(dates): send and parse the due and followUp dates correctly
Related to: CAM-2623, CAM-2833

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -10,7 +10,7 @@
 
   <span ng-if="varType === 'datetime' || varType === 'date' || varType === 'time'"
         class="preview">
-    {{ editValue | camDate }}
+    {{ dateValue | camDate }}
   </span>
 
   <span class="field">
