--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -20,63 +20,67 @@
 
     <div class="container-fluid"
          cam-if-logged-in>
-      <div class="row controls">
-        <div class="cols col-sm-2 task-filters"
-             ng-controller="filterFormCtrl">
-          <div class="inner">
-            <h5>
-              <a href
-                 ng-show="userCanCreateFilter"
-                 ng-click="createFilter()">
-                New filter
-                <span class="glyphicon glyphicon-plus-sign"></span>
-              </a>
-            </h5>
+
+      <div ng-controller="camTasklistFilterCtrl">
+
+        <div class="row controls">
+          <div class="cols col-sm-2 task-filters"
+               ng-controller="filterFormCtrl">
+            <div class="inner">
+              <h5>
+                <a href
+                   ng-show="userCanCreateFilter"
+                   ng-click="createFilter()">
+                  New filter
+                  <span class="glyphicon glyphicon-plus-sign"></span>
+                </a>
+              </h5>
+            </div>
+
           </div>
 
-        </div>
+          <div class="cols col-sm-4 current-filter">
+            <div class="inner">
+              <div class="row">
+                <div class="col-xs-12">
+                <!--
+                <div class="col-xs-6">
+                  <h5>&nbsp;</h5>
+                </div>
+                <div class="col-xs-6 dropdown sorting">
+                -->
+                  <div cam-sorting-choices
+                       filter-data="filterData"></div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <div class="cols col-sm-4 current-filter">
-          <div class="inner">
-            <div class="row">
-              <div class="col-xs-12">
-              <!--
-              <div class="col-xs-6">
-                <h5>&nbsp;</h5>
-              </div>
-              <div class="col-xs-6 dropdown sorting">
-              -->
-                <div cam-sorting-choices
-                     by="priority"
-                     order="desc"></div>
-              </div>
+          <div class="cols col-sm-6 current-task">
+            <div class="inner">
+              <h5>&nbsp;</h5>
             </div>
           </div>
         </div>
 
-        <div class="cols col-sm-6 current-task">
-          <div class="inner">
-            <h5>&nbsp;</h5>
+        <div class="row task-board">
+          <div class="cols col-sm-2 task-filters">
+            <div class="inner"
+                 cam-tasklist-filters
+                 filter-data="filterData"></div>
           </div>
-        </div>
-      </div>
 
-      <div class="row task-board">
-        <div class="cols col-sm-2 task-filters">
-          <div class="inner"
-               cam-tasklist-filters></div>
-        </div>
+          <div class="cols col-sm-4 task-list">
+            <div class="inner"
+                 cam-tasklist-filter-tasks
+                 filter-data="filterData"></div>
+          </div>
 
-        <div class="cols col-sm-4 task-list">
-          <div class="inner"
-               cam-tasklist-filter-tasks
-               filter="currentFilter"></div>
-        </div>
-
-        <div class="cols col-sm-6 current-task">
-          <div class="inner"
-               cam-tasklist-task
-               task="currentTask"></div>
+          <div class="cols col-sm-6 current-task">
+            <div class="inner"
+                 cam-tasklist-task
+                 filter-data="filterData"></div>
+          </div>
         </div>
       </div>
     </div>
